syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message Appointments {
    string id = 1;
    string barbershop_id = 2;
    string customer_id = 3;
    string barber_id = 4;
    google.protobuf.Timestamp appointment_date_time = 5;
    int32 status = 6;
    google.protobuf.Timestamp create_at = 7;
    google.protobuf.Timestamp update_at = 8;
    int32 service_timer = 9;
}