syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message BarberManagers {
    string barber_id = 1;
    string manager_id = 2;
    google.protobuf.Timestamp create_at = 4;
    google.protobuf.Timestamp update_at = 5;
}