syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message BarberShops {
    string id = 1;
    string barber_shop_chain_id = 2;
    string name = 3;
    int32 province_id = 4;
    int32 district_id = 5;
    int32 ward_id = 6;
    string specific_location = 7;
    string phone = 8;
    string email = 9;
    string website_url = 10;
    string avatar_url = 11;
    string cover_photo_url = 12;
    string facade_photo_url = 13;
    string representative_name = 14;
    string citizen_id = 15;
    string representative_phone = 16;
    string representative_email = 17;
    string representative_phone_other = 18;
    TimeOfDay start_time_monday = 19;
    TimeOfDay end_time_monday = 20;
    TimeOfDay start_time_tuesday = 21;
    TimeOfDay end_time_tuesday = 22;
    TimeOfDay start_time_wednesday = 23;
    TimeOfDay end_time_wednesday = 24;
    TimeOfDay start_time_thursday = 25;
    TimeOfDay end_time_thursday = 26;
    TimeOfDay start_time_friday = 27;
    TimeOfDay end_time_friday = 28;
    TimeOfDay start_time_saturday = 29;
    TimeOfDay end_time_saturday = 30;
    TimeOfDay start_time_sunday = 31;
    TimeOfDay end_time_sunday = 32;
    int32 interval_scheduler = 33;
    bool is_main_branch = 34;
    bool is_reputation = 35;
    bool is_verified = 36;
    google.protobuf.Timestamp create_at = 37;
    float distance = 38;
}