syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message BarberShopServiceCategories {
    string id = 1;
    string barbershop_chain_id = 2;
    string barbershop_id = 3;
    string service_category_id = 4;
    string name = 5;
    google.protobuf.Timestamp create_at = 6;
    google.protobuf.Timestamp update_at = 7;
}