syntax = "proto3";

package pb;

import "barber/barber_managers.proto";

option go_package = "barbershop/src/pb/barber";


message CreateBarberManagersRequest{
    string barber_id = 1;
    string manager_id = 2;
}

message CreateBarberManagersResponse{
    BarberManagers barber_manager = 1;
}